--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# custom
+wingman-data/
+
 # Windows thumbnail cache files
 Thumbs.db
 Thumbs.db:encryptable
@@ -196,4 +199,3 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-wingman-data/
