--- a/asar_api/assets/templates/lconfig.yml
+++ b/asar_api/assets/templates/lconfig.yml
@@ -53,6 +53,7 @@ policies:
 # # See https://rasa.com/docs/rasa/policies for more information.
 - name: MemoizationPolicy
 - name: RulePolicy
+  enable_fallback_prediction: false
 - name: UnexpecTEDIntentPolicy
   max_history: 5
   epochs: 100
