--- a/asar_api/assets/templates/lconfig.yml
+++ b/asar_api/assets/templates/lconfig.yml
@@ -62,4 +62,7 @@ policies:
   epochs: 100
   # sigmoid cross entropy loss
   constrain_similarities: true
-  
+
+session_config:
+  session_expiration_time: 60
+  carry_over_slots_to_new_session: true
